--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.600.0",
     "@types/uuid": "^9.0.8",
     "uuid": "^10.0.0"
   }
