--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.602.0",
     "@aws-sdk/client-s3": "^3.600.0",
+    "@aws-sdk/lib-dynamodb": "^3.602.0",
+    "@aws-sdk/util-dynamodb": "^3.602.0",
     "@types/uuid": "^9.0.8",
     "uuid": "^10.0.0"
   }
