add cognito user pool

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aws-sdk/lib-dynamodb": "^3.602.0",
     "@aws-sdk/util-dynamodb": "^3.602.0",
     "@types/uuid": "^9.0.8",
+    "aws-amplify": "^6.3.7",
     "uuid": "^10.0.0"
   }
 }
