add cognito authorizer

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Debug local file",
+            "nodeVersionHint": 18,
             "runtimeArgs": [
                 "-r",
                 "ts-node/register"
