--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "@aws-sdk/util-dynamodb": "^3.602.0",
     "@types/uuid": "^9.0.8",
     "aws-amplify": "^6.3.7",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
     "uuid": "^10.0.0"
+  },
+  "browser": {
+    "crypto": "crypto-browserify"
   }
 }
