--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,13 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "ES2020"
+        "target": "ES2020",
+        "baseUrl": "./",
+        "paths": {
+            "crypto": [
+                "node_modules/crypto-js"
+            ]
+        }
     },
     "exclude": [
         "node_modules"
