--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "deploy": "npx cdk deploy --all --outputs-file outputs.json"
   },
   "keywords": [],
   "author": "",
@@ -26,11 +27,14 @@
     "@aws-sdk/client-s3": "^3.600.0",
     "@aws-sdk/lib-dynamodb": "^3.602.0",
     "@aws-sdk/util-dynamodb": "^3.602.0",
+    "@types/jest": "^29.5.12",
     "@types/uuid": "^9.0.8",
     "aws-amplify": "^6.3.7",
     "aws-xray-sdk-core": "^3.9.0",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.2",
     "uuid": "^10.0.0"
   },
   "browser": {
